@@ -1,6 +1,6 @@
 <f:layout name="defaultLayout" />
 
-<f:section name="bibos">
+<f:section name="bibos">INDEX
 	<f:for each="{bibos}" as="bibo">
 		<h3>{bibo.titel}</h3>
 		{bibo.fakultaet}
