@@ -78,6 +78,11 @@
 				<dd><div id="map-{bibo.uid}" class="karte"></div></dd>
 
 				<!-- /Karte -->
+
+				<!-- Singleview -->
+				<dt><f:link.action action="single" controller="Bibliothek" arguments="{bibliothek:bibo}">Einzelansicht</f:link.action>	</dt>
+				<dd></dd>
+
 			</dl>
 		</div>
 	</f:for>
