@@ -55,3 +55,7 @@
 	width:380px;
 	height:300px;
 }
+
+.standorte-infobox {
+	font-size: 80%;
+}
