@@ -1,6 +1,7 @@
 2011-02-04 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Hookaufruf kompatibel zu TYPO3 4.4 gemacht
 	* Content Rendering vereinheitlicht (WWW-530)
+	* Maps Optik angepasst (Infobox)
 
 2011-02-03 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Frontendausgabe angepasst (WWW-529)
